fix profile stats on mobile

--- a/less/account.less
+++ b/less/account.less
@@ -199,10 +199,12 @@
 			font-size: 35px;
 			line-height: 25px;
 			margin-top: 25px;
+			margin-bottom: -20px;
 
 			.stat {
 				display: inline-block;
 				min-width: 100px;
+				margin-bottom: 20px;
 			}
 
 			.stat-label {
